--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/rss": "^2.1.0",
     "@resvg/resvg-js": "^2.4.1",
+    "animate.css": "^4.1.1",
     "astro": "^2.0.8",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
