--- a/package.json
+++ b/package.json
@@ -16,37 +16,39 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/rss": "^2.1.0",
-    "@resvg/resvg-js": "^2.4.1",
-    "@vercel/analytics": "^0.1.11",
+    "@astrojs/rss": "^4.0.12",
+    "@resvg/resvg-js": "^2.6.2",
+    "@tailwindcss/vite": "^4.1.14",
+    "@vercel/analytics": "^1.5.0",
     "animate.css": "^4.1.1",
-    "astro": "^2.0.8",
-    "fuse.js": "^6.6.2",
+    "astro": "^5.14.1",
+    "fuse.js": "^7.1.0",
     "github-slugger": "^2.0.0",
     "remark-collapse": "^0.1.2",
-    "remark-toc": "^8.0.1",
-    "satori": "^0.2.3",
-    "tailwindcss": "^3.2.4"
+    "remark-toc": "^9.0.0",
+    "satori": "^0.18.3",
+    "tailwindcss": "^4.1.14",
+    "vite~": "link:\u001b[200~@tailwindcss/vite~"
   },
   "devDependencies": {
-    "@astrojs/react": "^2.0.2",
-    "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/github-slugger": "^1.3.0",
-    "@types/react": "^18.0.27",
-    "@typescript-eslint/parser": "^5.51.0",
-    "astro-eslint-parser": "^0.11.0",
-    "commitizen": "^4.3.0",
+    "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "^3.6.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/github-slugger": "^2.0.0",
+    "@types/react": "^19.2.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "astro-eslint-parser": "^1.2.2",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-astro": "^0.23.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.1",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "eslint": "^9.37.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "config": {
     "commitizen": {
