--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "astro-paper",
   "version": "2.1.0",
+  "engines": {
+    "node": "^22.0.0"
+  },
   "private": false,
   "scripts": {
     "dev": "astro dev",
