--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "github-slugger": "^2.0.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
+    "katex": "^0.16.11",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "satori": "^0.18.3",
     "tailwindcss": "^4.1.14",
     "vite~": "link:\u001b[200~@tailwindcss/vite~"
